--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "svix": "^1.7.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
