--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "^4.18.2",
         "nodemon": "^3.0.1",
         "socket.io": "^4.7.2",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
     }
 }
