--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon index.ts"
+        "server": "nodemon"
     },
     "keywords": [],
     "author": "",
