--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "socket.io": "^4.7.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.7",
+        "utf-8-validate": "^5.0.10"
     }
 }
