--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-toastify": "^9.1.3",
     "socket.io-client": "^4.7.2",
     "svix": "^1.7.0",
     "tailwind-merge": "^1.14.0",
