--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
     "mongoose": "^7.4.2",
