--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.2.0",
+    "@upstash/redis": "^1.22.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
