--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
