--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "micro": "^10.0.1",
     "mongoose": "^7.5.0",
     "next": "13.4.12",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
