--- a/package.json
+++ b/package.json
@@ -39,12 +39,11 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
-    "eslint-config-next": "^13.5.2",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
     "mongoose": "^7.5.0",
-    "next": "^13.5.2",
+    "next": "13.4.12",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.27",
     "react": "^18.2.0",
