--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
-    "@clerk/themes": "^1.7.5",
+    "@clerk/nextjs": "^4.24.0",
+    "@clerk/themes": "^1.7.6",
     "@hookform/resolvers": "^3.2.0",
     "@liveblocks/client": "^1.3.3",
     "@liveblocks/react": "^1.3.3",
@@ -46,8 +46,8 @@
     "next": "13.4.12",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.27",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "socket.io-client": "^4.7.2",
     "svix": "^1.7.0",
