update:Add->CoreModuleAI

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.2.0",
     "@upstash/redis": "^1.22.0",
+    "ai": "^2.2.13",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -48,12 +49,16 @@
     "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
     "mongoose": "^7.5.0",
+    "nanoid": "^5.0.1",
     "next": "^13.5.2",
     "node-fetch": "^3.3.2",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-intersection-observer": "^9.5.2",
+    "react-markdown": "^8.0.7",
     "socket.io-client": "^4.7.2",
     "svix": "^1.7.0",
     "tailwind-merge": "^1.14.0",
