--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
@@ -45,6 +48,7 @@
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "eslint-config-next": "^13.5.2",
+    "focus-trap-react": "^10.2.2",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.263.1",
     "micro": "^10.0.1",
@@ -59,6 +63,10 @@
     "react-hook-form": "^7.45.4",
     "react-intersection-observer": "^9.5.2",
     "react-markdown": "^8.0.7",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.5.3",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "svix": "^1.7.0",
     "tailwind-merge": "^1.14.0",
