--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose": "^7.5.0",
     "nanoid": "^5.0.1",
     "next": "^13.5.2",
+    "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
     "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
