--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.2.0",
     "@upstash/redis": "^1.22.0",
+    "@vercel/analytics": "^1.0.2",
+    "@vercel/kv": "^0.2.3",
+    "@vercel/og": "^0.5.17",
     "ai": "^2.2.13",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
